# brainwiki

./: Cargo.toml  Makefile  README.md  README.tpl  run_dev.sh  rustfmt.toml
src/: .web.rs.rustfmt  config.rs  data.rs  fs.rs  main.rs  main_template.rs  opts.rs  page.rs  settings.rs  web.rs
src/markdown/: mod.rs
src/tpl/: ace.js  base.rs  flash.js  index.rs  login.rs  misc.rs  mod.rs  new.js  new.rs  view.js  view.rs  white-icon.js
static/theme/: README.md  custom.css
testdata/: dpc.md  hello.md
theme/: custom.css
