[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
name = "brainwiki"
version = "0.1.0"
license = "MPL-2.0"

[[bin]]
name = "brainwiki"
path = "src/main.rs"

[dependencies]
actix-web = "*"
failure = "*"
lazy_static = "*"
notify = "*"
pulldown-cmark = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"

[dependencies.stpl]
git = "http://github.com/dpc/stpl"
