cargo-features = ["edition"]

[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
license = "MPL-2.0"
name = "brainwiki"
version = "0.1.0"
edition = '2018'

[[bin]]
name = "brainwiki"
path = "src/main.rs"

[dependencies]
actix-web = "*"
bytes = "*"
chrono = "*"
failure = "*"
futures = "*"
json = "*"
lazy_static = "*"
notify = "*"
pulldown-cmark = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
derive_more = "*"

[dependencies.stpl]
git = "http://github.com/dpc/stpl"
